--- a/public/CSS/generalServiceStyles/gs_contact_styles.css
+++ b/public/CSS/generalServiceStyles/gs_contact_styles.css
@@ -19,6 +19,7 @@ body{
     color: white;
     margin: 0 auto;
     font-size: 3.3em;
+    font-family: firalight;
 }
 
 body .contact-main-body .row{
