--- a/public/partials/company.html
+++ b/public/partials/company.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../CSS/company_styles.css" type="text/css">
     <link rel="stylesheet" href="../CSS/metalPlateStyles/mp_header_styles.css" />
     <link rel="stylesheet" href="../CSS/jquery.mThumbnailScroller.css" type="text/css">
+    <link rel="stylesheet" href="../CSS/tn_webfonts.css" />
 
     <script src="../scripts/jquery.mThumbnailScroller.js" type="text/javascript"></script>
 </head>
@@ -22,7 +23,7 @@
 <body>
 
     <div class="main-page-header">
-        <h1>会社概要</h1>
+        <div class="title">会社概要</div>
     </div>
 
     <div class="title-page">
