--- a/public/partials/gs_contact.html
+++ b/public/partials/gs_contact.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="../CSS/generalServiceStyles/gs_menu_styles.css" />
     <link rel="stylesheet" href="../CSS/generalServiceStyles/gs_footer_styles.css" />
     <link rel="stylesheet" href="../CSS/generalServiceStyles/gs_contact_form.css" />
+    <link rel="stylesheet" href="../CSS/tn_webfonts.css" />
 </head>
 <header>
     <div ng-include src="'partials/gs_header.html'"></div>
