--- a/public/partials/gs_header.html
+++ b/public/partials/gs_header.html
@@ -5,9 +5,9 @@
     </div>
     <div class="right-container col-lg-5 col-md-5 col-sm-5 col-xs-10
     col-xs-offset-1 col-sm-offset-0 col-md-offset-0 col-lg-offset-0">
-    <div class="row rc-row">
+    <div ng-controller="gsHeaderController" class="row rc-row">
             <div class="info-container col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                    <img src="../R/topsection/ic_location.png" alt="location" />
+                    <img ng-click="openNewTabLoc()" src="../R/topsection/ic_location.png" alt="location" />
                     <div class="divider"></div>
                     <p class="right-text">北海道滝川市本町2丁目3番5号
                         <br>073-0021 TSビル 1F</p>
