--- a/public/partials/gs_owners.html
+++ b/public/partials/gs_owners.html
@@ -32,16 +32,17 @@
                 <!-- recommendations -->
                 <div class="row wrapper-row" ng-repeat="info in ownersInfo">
                     <div class="icon col-lg-1 col-md-1 col-sm-1 col-xs-1">
-                        <span class="enum">.</span>
                     </div>
-                    <div class="info-text col-lg-11 col-md-11 col-sm-11 col-xs-11">
+                    <div class="info-text col-lg-5 col-md-5 col-sm-11 col-xs-11">
                         <p>{{info.msg}}</p>
                     </div>
+
+                    <div class="chart col-lg-6 col-md-6 col-sm-11 col-xs-11">
+                            <img src="../R/manage.gif">
+                        </div>
                 </div>
 
-                <div class="chart">
-                    <img src="../R/manage.gif">
-                </div>
+                
 
                 <!-- reviews -->
                 <div class="owners-voice">
