--- a/public/CSS/company_styles.css
+++ b/public/CSS/company_styles.css
@@ -4,13 +4,22 @@ body{
 }
 
 .main-page-header{
-    background-color: #272727;
-    padding: 40px;
+    height: 240px;
     text-align: center;
+    background-image: url('../../R/gsbg/nails.jpg');
+    background-position-y: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: flex;
+    align-items: center;
+    opacity: 0.9;
 }
 
-.main-page-header h1{
+.main-page-header .title{
     color: #FFF;
+    margin: 0 auto;
+    font-size: 40px;
+    font-family: mplusmedium;
 }
 
 .title-page{
