--- a/public/CSS/main.css
+++ b/public/CSS/main.css
@@ -167,6 +167,7 @@ body{
 
 .body-container .bx-wrapper{
     height: 500px;
+    max-height: 500px;
     overflow: hidden;
     border: none!important;
     box-shadow: none!important;
@@ -545,6 +546,10 @@ and (-webkit-min-device-pixel-ratio: 1) {
     
     .text-body{
         padding: 0 14px;
+    }
+
+    .body-container .bx-wrapper{
+        max-height: 231px;
     }
 
     .body-container .bx-wrapper .bx-pager.bx-default-pager a{
