--- a/public/partials/business.html
+++ b/public/partials/business.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="../CSS/business_styles.css" type="text/css">
     <link rel="stylesheet" href="../CSS/metalPlateStyles/mp_header_styles.css" />
     <link rel="stylesheet" href="../CSS/lightslider/lightslider.css" type="text/css">
+    <link rel="stylesheet" href="../CSS/tn_webfonts.css" />
+
     <script src="../scripts/lightslider/lightslider.js" type="text/javascript"></script>
 </head>
 <header>
@@ -21,8 +23,11 @@
 <body>
 
     <div class="main-page-header">
-        <h1>事業内容</h1>
-        <h1>SERVICE AND PRODUCTS</h1>
+        <div class="wrapper">
+
+                <div class="title">事業内容</div>
+                <div class="title down">SERVICE AND PRODUCTS</div>
+        </div>
     </div>
 
     <div class="title-page">
