--- a/public/CSS/main.css
+++ b/public/CSS/main.css
@@ -561,6 +561,7 @@ and (-webkit-min-device-pixel-ratio: 1) {
 
     .about-section{
         padding-top: 0px;
+        padding-bottom: 0;
     }
 
     .body-container .bx-wrapper .bx-caption span{
@@ -603,6 +604,22 @@ and (-webkit-min-device-pixel-ratio: 1) {
     .social .social-container{
         text-align: center;
         margin-top: 10px;
+    }
+
+    .options-section{
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+
+    .mobile-icons .title{
+        margin-top: 11px;
+        font-size: 14px;
+        color: slategrey;
+        font-family: mpluslight;
+    }
+
+    .mobile-icons .img-icon{
+        width: 55px;
     }
 }
 /* media querys for title sizes for xs screens */
