--- a/public/CSS/metalPlateStyles/mp_header_styles.css
+++ b/public/CSS/metalPlateStyles/mp_header_styles.css
@@ -143,7 +143,7 @@
         display: inline-flex;
     }
 
-    .divider{
+    .right-container .divider{
         width: 1px;
         height: 28px;
         background-color: #7F7F7F;
