--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -31,19 +31,16 @@
 </header>
 
 <body>
-
     <div class="body-container">
-
-
         <div class="bxslider">
             <div>
                 <img src="../R/mp_home/materials_1.jpg" title="確かな技術と最新鋭の設備。" />
             </div>
             <div>
-                <img src="../R/mp_home/slider1.jpg" title="The long and winding road" />
+                <img src="../R/mp_home/roof_black.jpg" title="The long and winding road" />
             </div>
             <div>
-                <img src="../R/mp_home/machine_black.jpg" title="Happy trees" />
+                <img src="../R/mp_home/roof_tanihouse.jpg" title="Happy trees" />
             </div>
         </div>
 
@@ -52,39 +49,53 @@
 
     <div class="main-body">
 
-        <div class="options-section">
+        <div class="options-section" ng-controller="optionsCtrl">
+            <div class="container-fluid">
+                <div class="row" style="max-width: 100%; margin: 0;">
+                    <div class="col-lg-10 col-md-10 col-sm-12 col-xs-12 col-xs-offset-0 col-sm-offset-0 col-md-offset-1 col-lg-offset-1" style="padding: 0px; ">
 
-            <div class="row" style="max-width: 100%; margin: 0;">
-                <div class="col-lg-10 col-md-10 col-sm-8 col-xs-10 col-xs-offset-1 col-sm-offset-2 col-md-offset-1 col-lg-offset-1" style="padding: 0px; ">
-
-                    <div class="row internal-serv-row">
-                        <div class="thumbnail col-lg-3-and-half col-md-3-and-half col-sm-3-and-half col-xs-full">
-                            <div class="box-icon" id="box-1">
-                                <img class="img-icon" src="../R/services_black.png">
+                        <div class="row internal-serv-row hidden-xs hidden-sm">
+                            <div ng-click="redirectTo('/business')" class="thumbnail col-lg-3-and-half col-md-3-and-half col-sm-3-and-half col-xs-full">
+                                <div class="box-icon" id="box-1">
+                                    <img class="img-icon" src="../R/services_black.png">
+                                </div>
+                                <div class="caption" id="cap-1">
+                                    <h3>事業内容</h3>
+                                </div>
                             </div>
-                            <div class="caption" id="cap-1">
-                                <h3>事業内容</h3>
+
+                            <div ng-click="redirectTo('/company')" class="thumbnail col-lg-3-and-half col-md-3-and-half col-sm-3-and-half col-xs-full col-lg-offset-3-cuarters col-md-offset-3-cuarters col-sm-offset-3-cuarters">
+                                <div class="box-icon" id="box-2">
+                                    <img class="img-icon" src="../R/icons/company_icon_unactive.png">
+                                </div>
+                                <div class="caption" id="cap-2">
+                                    <h3>会社概要</h3>
+                                </div>
+                            </div>
+                            <div ng-click="scrollTo('mp-contact')" class="thumbnail col-lg-3-and-half col-md-3-and-half col-sm-3-and-half col-xs-full col-lg-offset-3-cuarters col-md-offset-3-cuarters col-sm-offset-3-cuarters">
+                                <div class="box-icon" id="box-3">
+                                    <img class="img-icon" src="../R/icons/contact_icon_unactive.png">
+                                </div>
+                                <div class="caption" id="cap-3">
+                                    <h3>お問い合わせ</h3>
+                                </div>
                             </div>
                         </div>
-
-                        <div class="thumbnail col-lg-3-and-half col-md-3-and-half col-sm-3-and-half col-xs-full col-lg-offset-3-cuarters col-md-offset-3-cuarters col-sm-offset-3-cuarters">
-                            <div class="box-icon" id="box-2">
-                                <img class="img-icon" src="../R/icons/company_icon_unactive.png">
+                        <div class="row">
+                            <div ng-click="redirectTo('/business')" class="mobile-icons col-sm-4 col-xs-4 hidden-lg hidden-md">
+                                    <img class="img-icon" src="../R/services_black.png">
+                                    <div class="title">事業内容</div class="title">
                             </div>
-                            <div class="caption" id="cap-2">
-                                <h3>会社概要</h3>
+                            <div ng-click="redirectTo('/company')" class="mobile-icons col-sm-4 col-xs-4 hidden-lg hidden-md">
+                                    <img class="img-icon" src="../R/icons/company_icon_unactive.png">
+                                    <div class="title">会社概要</div class="title">
                             </div>
-                        </div>
-                        <div class="thumbnail col-lg-3-and-half col-md-3-and-half col-sm-3-and-half col-xs-full col-lg-offset-3-cuarters col-md-offset-3-cuarters col-sm-offset-3-cuarters">
-                            <div class="box-icon" id="box-3">
-                                <img class="img-icon" src="../R/icons/contact_icon_unactive.png">
-                            </div>
-                            <div class="caption" id="cap-3">
-                                <h3>お問い合わせ</h3>
+                            <div ng-click="scrollTo('mp-contact')" class="mobile-icons col-sm-4 col-xs-4 hidden-lg hidden-md">
+                                    <img class="img-icon" src="../R/icons/contact_icon_unactive.png">
+                                    <div class="title">お問い合わせ</div class="title">
                             </div>
                         </div>
                     </div>
-
                 </div>
             </div>
         </div>
@@ -142,7 +153,7 @@
                         <div class="about-content">
 
                             <div class="about-content right">
-                                <img src="../R/mp_home/machine_blue.jpg">
+                                <img src="../R/mp_home/windows.jpg">
                             </div>
 
                         </div>
@@ -186,7 +197,7 @@
                                         </div>
                                         <div class="line"></div>
                                         <div class="btn-round">
-                                            <a class="btnClick" data-toggle="modal" data-target="#modal{{article._id}}">></a>
+                                            <a class="btnClick" data-toggle="modal" data-target="#modal{{article._id}}"><img src="../R/icons/path-3.svg"></a>
                                         </div>
                                     </div>
                                     <!-- Modal -->
@@ -246,7 +257,7 @@
                     <div class="row">
                         <div class="col-lg-5 col-md-5 col-sm-5 col-xs-10
                             col-lg-offset-0 col-md-offset-0 col-sm-offset-0 col-xs-offset-1" style="padding-right: 0px; padding-left: 0px;">
-                            <div class="contact-box" ng-controller="mpFormCtrl">
+                            <div id="mp-contact" class="contact-box" ng-controller="mpFormCtrl">
                                 <h3 class="contact-title">お問い合わせ</h3>
 
                                 <form name="mpContactForm" ng-submit="sendContactForm(mpcontact)" class="contact-form">
@@ -288,8 +299,6 @@
                 </div>
             </div>
         </div>
-        <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDnleYwXg3nbEGFus9O_9-4LnIjIhMuS4U">
-        </script>
         <script>
             $(function () {
                 $('.bxslider').bxSlider({
