--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -57,7 +57,7 @@
                         <div class="row internal-serv-row hidden-xs hidden-sm">
                             <div ng-click="redirectTo('/business')" class="thumbnail col-lg-3-and-half col-md-3-and-half col-sm-3-and-half col-xs-full">
                                 <div class="box-icon" id="box-1">
-                                    <img class="img-icon" src="../R/services_black.png">
+                                    <img class="img-icon" src="../R/icons/iconstaniguchi/briefcase.svg">
                                 </div>
                                 <div class="caption" id="cap-1">
                                     <h3>事業内容</h3>
@@ -66,7 +66,7 @@
 
                             <div ng-click="redirectTo('/company')" class="thumbnail col-lg-3-and-half col-md-3-and-half col-sm-3-and-half col-xs-full col-lg-offset-3-cuarters col-md-offset-3-cuarters col-sm-offset-3-cuarters">
                                 <div class="box-icon" id="box-2">
-                                    <img class="img-icon" src="../R/icons/company_icon_unactive.png">
+                                    <img class="img-icon" src="../R/icons/iconstaniguchi/puzzle.svg">
                                 </div>
                                 <div class="caption" id="cap-2">
                                     <h3>会社概要</h3>
@@ -74,7 +74,7 @@
                             </div>
                             <div ng-click="scrollTo('mp-contact')" class="thumbnail col-lg-3-and-half col-md-3-and-half col-sm-3-and-half col-xs-full col-lg-offset-3-cuarters col-md-offset-3-cuarters col-sm-offset-3-cuarters">
                                 <div class="box-icon" id="box-3">
-                                    <img class="img-icon" src="../R/icons/contact_icon_unactive.png">
+                                    <img class="img-icon" src="../R/icons/iconstaniguchi/chat-dialog.svg">
                                 </div>
                                 <div class="caption" id="cap-3">
                                     <h3>お問い合わせ</h3>
@@ -83,15 +83,15 @@
                         </div>
                         <div class="row">
                             <div ng-click="redirectTo('/business')" class="mobile-icons col-sm-4 col-xs-4 hidden-lg hidden-md">
-                                    <img class="img-icon" src="../R/services_black.png">
+                                    <img class="img-icon" src="../R/icons/iconstaniguchi/briefcase.svg">
                                     <div class="title">事業内容</div class="title">
                             </div>
                             <div ng-click="redirectTo('/company')" class="mobile-icons col-sm-4 col-xs-4 hidden-lg hidden-md">
-                                    <img class="img-icon" src="../R/icons/company_icon_unactive.png">
+                                    <img class="img-icon" src="../R/icons/iconstaniguchi/puzzle.svg">
                                     <div class="title">会社概要</div class="title">
                             </div>
                             <div ng-click="scrollTo('mp-contact')" class="mobile-icons col-sm-4 col-xs-4 hidden-lg hidden-md">
-                                    <img class="img-icon" src="../R/icons/contact_icon_unactive.png">
+                                    <img class="img-icon" src="../R/icons/iconstaniguchi/chat-dialog.svg">
                                     <div class="title">お問い合わせ</div class="title">
                             </div>
                         </div>
