add meta viewport tag in all pages

--- a/public/partials/business.html
+++ b/public/partials/business.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Metal Plate business</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../CSS/menu.css" type="text/css">
     <link rel="stylesheet" href="../CSS/footer.css" type="text/css">
     <link rel="stylesheet" href="../CSS/main.css" type="text/css">
