--- a/public/partials/gs_contact.html
+++ b/public/partials/gs_contact.html
@@ -3,9 +3,9 @@
 
 <head>
     <title>
-
+        General service contact page
     </title>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../CSS/generalServiceStyles/gs_contact_styles.css" />
     <link rel="stylesheet" href="../CSS/generalServiceStyles/gs_header_styles.css" />
     <link rel="stylesheet" href="../CSS/generalServiceStyles/gs_menu_styles.css" />
@@ -15,19 +15,13 @@
 </head>
 <header>
     <div ng-include src="'partials/gs_header.html'"></div>
-
-
-
 </header>
 
-
 <body>
-
     <div class="gs-title-container">
         <div class="title">
                 CONTACT US
-        </div>
-        
+        </div>  
     </div>
 
     <div class="contact-main-body">
