--- a/public/partials/gs_owners.html
+++ b/public/partials/gs_owners.html
@@ -3,9 +3,9 @@
 
 <head>
     <title>
-
+        General service owners
     </title>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../CSS/generalServiceStyles/gs_owners_styles.css" />
     <link rel="stylesheet" href="../CSS/generalServiceStyles/gs_header_styles.css" />
     <link rel="stylesheet" href="../CSS/generalServiceStyles/gs_menu_styles.css" />
