--- a/public/partials/maintaniguchi.html
+++ b/public/partials/maintaniguchi.html
@@ -3,6 +3,7 @@
 <html>
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Metal Plate home.</title>
 
 
@@ -22,44 +23,44 @@
     </div>
 
     <div class="container">
-            <div class="row">
-                    <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10
+        <div class="row">
+            <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10
                             col-lg-offset-1 col-md-offset-1 col-sm-offset-1 col-xs-offset-1">
-                        <div class="row">
-                                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12
+                <div class="row">
+                    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12
                                 ">
-                                    <div class="thumbnail">
-                                        <div class="logo-container">
-                                            <a href="#!/metalplatehome">
-                                                <img src="../R/logos/1logo.png" alt="...">
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div>
-                    
-                                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-                                    <div class="thumbnail">
-                                        <div class="logo-container">
-                                            <a href="#!/generalservice/home">
-                                                <img src="../R/logos/2logo.png" alt="...">
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div>
-                    
-                                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-                                    <div class="thumbnail">
-                                        <div class="logo-container">
-                                            <a>
-                                                <img src="../R/logos/3logo.png" alt="...">
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div>
+                        <div class="thumbnail">
+                            <div class="logo-container">
+                                <a href="#!/metalplatehome">
+                                    <img src="../R/logos/1logo.png" alt="...">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                        <div class="thumbnail">
+                            <div class="logo-container">
+                                <a href="#!/generalservice/home">
+                                    <img src="../R/logos/2logo.png" alt="...">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                        <div class="thumbnail">
+                            <div class="logo-container">
+                                <a>
+                                    <img src="../R/logos/3logo.png" alt="...">
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
-            
+            </div>
+        </div>
+
     </div>
 
     <div class="row slider">
