--- a/public/partials/gs_home.html
+++ b/public/partials/gs_home.html
@@ -3,9 +3,9 @@
 
 <head>
     <title>
-
+       Taniguchi General service.
     </title>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../CSS/generalServiceStyles/home_gs_styles.css" />
     <link rel="stylesheet" href="../CSS/generalServiceStyles/gs_header_styles.css" />
     <link rel="stylesheet" href="../CSS/generalServiceStyles/gs_menu_styles.css" />
