--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="../CSS/footer.css" type="text/css">
     <link rel="stylesheet" href="../CSS/article_box.css" type="text/css">
     <link rel="stylesheet" href="../CSS/metalPlateStyles/mp_header_styles.css" />
-
+    <link rel="stylesheet" href="../CSS/tn_webfonts.css" />
 
     <!--    <script src="scripts/responsivemenu.js"></script>-->
 
