--- a/public/partials/maintaniguchi.html
+++ b/public/partials/maintaniguchi.html
@@ -8,7 +8,7 @@
 
 
     <link rel="stylesheet" href="../CSS/main_taniguchi_styles.css" type="text/css" />
-
+    <link rel="stylesheet" href="../CSS/tn_webfonts.css" />
     <!-- bxSlider CSS file -->
     <link href="../plugins/facebooklikeslider/css/jquery.bxslider.css" rel="stylesheet" />
 </head>
