--- a/public/partials/gs_owners.html
+++ b/public/partials/gs_owners.html
@@ -31,18 +31,16 @@
             col-lg-offset-1 col-md-offset-1 col-sm-offset-1 col-xs-offset-1">
                 <!-- recommendations -->
                 <div class="row wrapper-row" ng-repeat="info in ownersInfo">
-                    <div class="icon col-lg-1 col-md-1 col-sm-1 col-xs-1">
-                    </div>
-                    <div class="info-text col-lg-5 col-md-5 col-sm-11 col-xs-11">
+                    <div class="info-text col-lg-6 col-md-6 col-sm-12 col-xs-12">
                         <p>{{info.msg}}</p>
                     </div>
 
-                    <div class="chart col-lg-6 col-md-6 col-sm-11 col-xs-11">
-                            <img src="../R/manage.gif">
-                        </div>
+                    <div class="chart col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                        <img src="../R/manage.gif">
+                    </div>
                 </div>
 
-                
+
 
                 <!-- reviews -->
                 <div class="owners-voice">
@@ -50,50 +48,51 @@
                         <h4>賃貸物件の一例・オーナー様の声
                         </h4>
                     </div>
-                    <div class="review-wrapper row" ng-repeat="review in reviews" ng-class-odd="oddie">
-                        <div ng-if="$even">
-                            <div class="img-container col-lg-5 col-md-5">
-                                <div class="house-img">
-                                    <img ng-src="{{review.houseImgPath}}" alt="Modern House" />
+                    <div class="container">
+                        <div class="review-wrapper row" ng-repeat="review in reviews" ng-class-odd="oddie">
+                            <div ng-if="$even">
+                                <div class="img-container col-lg-5 col-md-5 col-sm-12 col-xs-12">
+                                    <div class="house-img">
+                                        <img ng-src="{{review.houseImgPath}}" alt="Modern House" />
+                                    </div>
+                                    <div class="reviewer-img">
+                                        <img ng-src="{{review.reviewerPath}}" alt="Reviewer" />
+                                    </div>
                                 </div>
-                                <div class="reviewer-img">
-                                    <img ng-src="{{review.reviewerPath}}" alt="Reviewer" />
+                                <div class="review col-lg-7 col-md-7 col-sm-12 col-xs-12">
+                                    <div class="review-title">
+                                        {{review.title}}
+                                    </div>
+                                    <div class="review-text">
+                                        {{review.text}}
+                                    </div>
+
                                 </div>
                             </div>
-                            <div class="review col-lg-7 col-md-7">
-                                <div class="review-title">
-                                    {{review.title}}
+                            <!-- if odd evaluates to true, show pictures aligned to right of the screen -->
+                            <div ng-if="$odd">
+                                <div class="img-container col-lg-5 col-md-5 col-sm-12 col-xs-12
+                                    col-lg-push-7 col-md-push-7 col-sm-push-0 col-xs-push-0">
+                                    <div class="house-img">
+                                        <img ng-src="{{review.houseImgPath}}" alt="Modern House" />
+                                    </div>
+                                    <div class="reviewer-img">
+                                        <img ng-src="{{review.reviewerPath}}" alt="Reviewer" />
+                                    </div>
                                 </div>
-                                <div class="review-text">
-                                    {{review.text}}
-                                </div>
+                                <div class="review col-lg-7 col-md-7 col-sm-12 col-xs-12
+                                    col-lg-pull-5 col-md-pull-5 col-sm-pull-0 col-xs-pull-0">
+                                    <div class="review-title">
+                                        {{review.title}}
+                                    </div>
+                                    <div class="review-text">
+                                        谷口総合サービス　最高です！<br> 仕事柄、国内外の移動が多くなかなか物件管理が難しく、アパート経営を始めた当初から入居者募集及び家賃管理、物件の管理までお願いしておりますが、今まで何の問題もなく、逆に自社物件かのように大切に管理していただいて、大変感謝しております。これからも、賃貸物件を増やすことがあれば、もちろん谷口総合サービスだと決めております。<br>滝川市での賃貸物件の管理は谷口総合サービスがお勧めです。
+                                    </div>
 
-                            </div>
-                        </div>
-                        <!-- if odd evaluates to true, show pictures aligned to right of the screen -->
-                        <div ng-if="$odd">
-                            <div class="review col-lg-7 col-md-7">
-                                <div class="review-title">
-                                    {{review.title}}
-                                </div>
-                                <div class="review-text">
-                                    {{review.text}}
-                                </div>
-
-                            </div>
-
-                            <div class="img-container col-lg-5 col-md-5">
-                                <div class="house-img">
-                                    <img ng-src="{{review.houseImgPath}}" alt="Modern House" />
-                                </div>
-                                <div class="reviewer-img">
-                                    <img ng-src="{{review.reviewerPath}}" alt="Reviewer" />
                                 </div>
                             </div>
-
                         </div>
                     </div>
-
                 </div>
 
             </div>
