modify slider imgs size

--- a/public/partials/gs_home.html
+++ b/public/partials/gs_home.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>
-       Taniguchi General service.
+        Taniguchi General service.
     </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../CSS/generalServiceStyles/home_gs_styles.css" />
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../CSS/generalServiceStyles/gs_menu_styles.css" />
     <link rel="stylesheet" href="../CSS/generalServiceStyles/gs_footer_styles.css" />
     <link rel="stylesheet" href="../CSS/tn_webfonts.css" />
-    
+
     <!-- bxSlider CSS file -->
     <link href="../plugins/facebooklikeslider/css/jquery.bxslider.css" rel="stylesheet" />
 
@@ -75,43 +75,43 @@
 
         </div>
         <div class="row gs-mission">
-                <div class="left col-lg-5 col-md-5 col-sm-5 col-xs-10
+            <div class="left col-lg-5 col-md-5 col-sm-5 col-xs-10
                         col-lg-offset-1 col-md-offset-1 col-sm-offset-1 col-xs-offset-1">
-                    <h2>
-                        谷口総合サービスとは・・・
-                        <div id="custom-border"></div>
-                    </h2>
-                    <p class="darker">It is a long established fact that a reader will be distracted by the readable content of a page when
-                        looking at its layout. The point of using Lorem Ipsum is that it has a more or less normal distribution
-                        of letters, as opposed to using Content here content here making it look like redable English.
+                <h2>
+                    谷口総合サービスとは・・・
+                    <div id="custom-border"></div>
+                </h2>
+                <p class="darker">It is a long established fact that a reader will be distracted by the readable content of a page when looking
+                    at its layout. The point of using Lorem Ipsum is that it has a more or less normal distribution of letters,
+                    as opposed to using Content here content here making it look like redable English.
 
-                    </p>
-                    <p>
-                        It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
-                        The point of using Lorem Ipsum is that it has a more or less normal distribution of letters, as opposed
-                        to using Content here content here making it look like redable English.
+                </p>
+                <p>
+                    It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
+                    The point of using Lorem Ipsum is that it has a more or less normal distribution of letters, as opposed
+                    to using Content here content here making it look like redable English.
 
-                    </p>
-                    <p>
-                        The point of using Lorem Ipsum is that it has a more or less normal distribution of letters, as opposed to using Content
-                        here content here making it look like redable English.
+                </p>
+                <p>
+                    The point of using Lorem Ipsum is that it has a more or less normal distribution of letters, as opposed to using Content
+                    here content here making it look like redable English.
 
-                    </p>
-                </div>
-                <div class="right col-lg-5 col-md-5 col-sm-5 col-xs-10
+                </p>
+            </div>
+            <div class="right col-lg-5 col-md-5 col-sm-5 col-xs-10
                 col-xs-offset-1 col-sm-offset-1 col-md-offset-0 col-lg-offset-0">
-                    <div class="row">
-                            <div class="column-1 col-lg-6 col-md-6 col-sm-6 col-xs-6" >
-                                    <img class="h-img" src="../R/gs_home/Apartment1.png" alt="">
-                                    <img class="h-img" src="../R/gs_home/apartment_2.png" alt="">
-                                </div>
-                                <div class="column-2 col-lg-6 col-md-6 col-sm-6 col-xs-6">
-                                    <img class="h-img" src="../R/gs_home/apartment_1.png" alt="">
-                                    <img class="h-img" src="../R/gs_home/apartment_blossom.jpg" alt="">
-                                </div>
+                <div class="row">
+                    <div class="column-1 col-lg-6 col-md-6 col-sm-6 col-xs-6">
+                        <img class="h-img" src="../R/gs_home/Apartment1.png" alt="">
+                        <img class="h-img" src="../R/gs_home/apartment_2.png" alt="">
                     </div>
-                 
+                    <div class="column-2 col-lg-6 col-md-6 col-sm-6 col-xs-6">
+                        <img class="h-img" src="../R/gs_home/apartment_1.png" alt="">
+                        <img class="h-img" src="../R/gs_home/apartment_blossom.jpg" alt="">
+                    </div>
                 </div>
+
+            </div>
         </div>
     </div>
 
@@ -121,7 +121,7 @@
     </footer>
 
     <script>
-        $(document).ready(function () {
+        $(document).ready(() => {
             var hash = window.location.hash;
             console.log(window.location.hash);
             $('.nav > li > a[href="' + hash + '"]').parent().addClass('active');
@@ -129,7 +129,7 @@
 
     </script>
     <script>
-        $(function () {
+        $(() => {
             $('.bxslider').bxSlider({
                 mode: 'fade',
                 auto: true,
